exe_test2.log
2026-05-07 15:44:33,522 - ERROR - FATAL ERROR: invalid character '\u2705' (U+2705) (web_ui.py, line 337)
2026-05-07 15:44:33,523 - ERROR - Traceback (most recent call last):
  File "app.py", line 14, in <module>
    from src.uploader.web_ui import create_uploader_app
  File "C:\Users\jonat\Documents\Python\BirdNET-Uploader-App\dist\birdnet-uploader\_internal\src\uploader\web_ui.py", line 337
    - \u2705 Adicionado: test_imports.py para diagn¾stico
      ^
SyntaxError: invalid character '\u2705' (U+2705)


============================================================
ERROR: invalid character '\u2705' (U+2705) (web_ui.py, line 337)
============================================================
Details:
Traceback (most recent call last):
  File "app.py", line 14, in <module>
    from src.uploader.web_ui import create_uploader_app
  File "C:\Users\jonat\Documents\Python\BirdNET-Uploader-App\dist\birdnet-uploader\_internal\src\uploader\web_ui.py", line 337
    - \u2705 Adicionado: test_imports.py para diagn¾stico
      ^
SyntaxError: invalid character '\u2705' (U+2705)


For debugging, see: ~/.birdnet-uploader/logs/
Or run: python debug.bat

Press Enter to close...
